--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  background-color: #eceef1;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: space-between;
 }
 
 .App-logo {
