added center alignment

--- a/src/components/SignUpForm/SignUpForm.module.css
+++ b/src/components/SignUpForm/SignUpForm.module.css
@@ -8,6 +8,7 @@
   background-color: white;
   justify-content: space-around;
   border: 1px solid lightgray;
+  align-self: center;
 }
 
 .signUpBtn {
