--- a/src/components/SignUpForm/SignUpForm.module.css
+++ b/src/components/SignUpForm/SignUpForm.module.css
@@ -14,3 +14,9 @@
 .signUpBtn {
   align-self: center;
 }
+
+.labeledInput {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
