--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,17 @@ table {
   border-spacing: 0;
 }
 
+label {
+  margin-bottom: 10px;
+}
+
+input {
+  width: 75%;
+  height: 30px;
+  border-radius: 3px;
+  border: 1px solid lightgray;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
