--- a/src/components/SignUpForm/SignUpForm.module.css
+++ b/src/components/SignUpForm/SignUpForm.module.css
@@ -14,10 +14,16 @@
 
 .signUpBtn {
   align-self: center;
+  width: 100%;
+  color: white;
+  background-color: #0077c5;
+  border-radius: 3px;
+  border: none;
+  height: 50px;
 }
 
 .labeledInput {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
