--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,15 @@ table {
   border-spacing: 0;
 }
 
+h1 {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+}
+
+h3 {
+  font-size: .8em;
+}
+
 label {
   margin-bottom: 10px;
 }
