made vertical padding 0

--- a/src/components/SignUpForm/SignUpForm.module.css
+++ b/src/components/SignUpForm/SignUpForm.module.css
@@ -9,7 +9,7 @@
   justify-content: space-around;
   border: 1px solid lightgray;
   align-self: center;
-  padding: 40px;
+  padding: 0 40px;
 }
 
 .signUpBtn {
