--- a/src/components/PageFooter/PageFooter.module.css
+++ b/src/components/PageFooter/PageFooter.module.css
@@ -1,3 +1,8 @@
 .pageFooter {
-    background-color: white;
+  background-color: white;
+  height: 60px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 15px;
 }
