--- a/src/components/SignUpForm/SignUpForm.module.css
+++ b/src/components/SignUpForm/SignUpForm.module.css
@@ -1,16 +1,24 @@
 .signUpForm {
   display: flex;
   flex-direction: column;
-  min-width: 320px;
-  max-width: 320px;
+  min-width: 380px;
+  max-width: 380px;
   min-height: 815px;
   max-height: 815px;
   background-color: white;
-  justify-content: space-around;
   border: 1px solid lightgray;
   align-self: center;
-  padding: 0 40px;
+  padding-top: 30px;
   margin: 30px 0;
+  justify-content: space-between;
+}
+
+.signUpFields {
+  display: flex;
+  padding: 0 40px;
+  flex-direction: column;
+  justify-content: space-around;
+  flex: 1
 }
 
 .signUpBtn {
