--- a/src/components/SignUpForm/SignUpForm.module.css
+++ b/src/components/SignUpForm/SignUpForm.module.css
@@ -8,8 +8,8 @@
   background-color: white;
   border: 1px solid lightgray;
   align-self: center;
+  margin-bottom: auto;
   padding-top: 30px;
-  margin: 30px 0;
   justify-content: space-between;
 }
 
@@ -18,7 +18,7 @@
   padding: 0 40px;
   flex-direction: column;
   justify-content: space-around;
-  flex: 1
+  flex: 1;
 }
 
 .signUpBtn {
